# c_study

./: CMakeLists.txt  README.md
c/: CMakeLists.txt  dgseo.json
c/00/: 00.c
c/01/: 01.c  CMakeLists.txt
c/02/: CMakeLists.txt  main.c
c/03/: main.c
c/04/: CMakeLists.txt  main.c
c/05/: main.c
c/06/: CMakeLists.txt  main.c
c/07/: CMakeLists.txt  main.c
c/08/: main.c
c/09/: CMakeLists.txt  main.c
c/10/: main.c
c/11/: main.c
c/12/: main.c
c/13/: main.c
c/14/: CMakeLists.txt  book.c  book.h  main.c  str.c  str.h
c/15/: human.c  human.h  main.c  str.c  str.h
c/16/: CMakeLists.txt  main.c
c/17/: CMakeLists.txt  main.c
c/18/: CMakeLists.txt  main.c
c/19/: main.c
c/20/: main.c
c/21/: CMakeLists.txt  main.c
c/22/: CMakeLists.txt  main.c
c/book_manager/: CMakeLists.txt  main.c
c/compiler_linker_loader/: main.c
c/hello_world/: CMakeLists.txt  main.c
c/json_parser/: CMakeLists.txt  main.c
cpp/: CMakeLists.txt
cpp/01/: header1.h  header2.h  main.cpp
cpp/01_helloworld/: CMakeLists.txt  c_hello.c  hello.cpp
cpp/02/: main.cpp
cpp/02_if_and_for/: main.cpp
cpp/03/: CMakeLists.txt  main.cpp
cpp/04/: main.cpp
cpp/05/: CMakeLists.txt  main.cpp
cpp/06/: main.cpp
cpp/07/: main.cpp
cpp/08/: CMakeLists.txt  main.cpp
cpp/09/: main.cpp
cpp/10/: CMakeLists.txt  main.cpp
cpp/11/: CMakeLists.txt  main.cpp
cpp/12/: CMakeLists.txt  main.cpp
cpp/13/: CMakeLists.txt  main.cpp
cpp/14/: main.cpp
cpp/15/: CMakeLists.txt  main.cpp
cpp/16/: main.cpp
cpp/17/: main.cpp
cpp/18/: main.cpp
cpp/19/: CMakeLists.txt  (+1 more)
(+16 files in other folders)
